--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 <body>
     <header>
         <a href="#" class="logo">Portfolio</a>
-        <div class="togle" onclick="toggleMenu();"></div>
+        <div class="toggle" onclick="toggleMenu();"></div>
         <ul class="menu">
             <li><a href="#home">Home</a></li>
             <li><a href="#about">About</a></li>
